--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <span>Twitter</span>
                 </button>
             </a>
-            <a href="satyendra1dbg@gmail.com" target="_blank">
+            <a href="mailto:satyendra1dbg@gmail.com" target="_blank">
                 <button class="second-btn">
                     <img src="email.webp" alt="No" height="20px" width="20px">
                     <span style="margin-left: 2px;">Email</span>
