--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class='outer-box'>
         <div class='satyendra-text'>
-            <img src="pic.jpg" alt="me" width="10%" height="10%" class="circular">
+            <img src="pic.jpg" alt="me" class="circular">
         </div>
         <div class='satyendra-text'>
             Satyendra Kumar
