--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="https://topmate.io/ssatyendrak13/" target="_blank">
                 <button class="second-btn">
                     <img src="topmate.png" alt="No" height="20px" width="20px">
-                    <span style="margin-left: 2px;" class="file-text">Connect on Topmate</span>
+                    <span style="margin-left: 2px;" class="file-text">Topmate</span>
                 </button>
             </a>
             
